@@ -25,6 +25,11 @@ configure_file(
     @ONLY
 )
 configure_file(
+    dbt2-build.in
+    ${CMAKE_BINARY_DIR}/dbt2-build
+    @ONLY
+)
+configure_file(
     dbt2-post-process.sql.in
     ${CMAKE_BINARY_DIR}/dbt2-post-process.sql
     @ONLY
@@ -38,6 +43,7 @@ configure_file(
 install (
 	PROGRAMS
     ${CMAKE_BINARY_DIR}/dbt2
+    ${CMAKE_BINARY_DIR}/dbt2-build
     ${CMAKE_BINARY_DIR}/dbt2-post-process.sql
     ${CMAKE_BINARY_DIR}/dbt2-run
     ${CMAKE_SOURCE_DIR}/src/scripts/dbt2-generate-report
